<resources>
    <string name="app_name">Elite vet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Elite</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_address">Address</string>
    <string name="menu_pet">Pet</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_newoffer">New offer</string>
    <string name="menu_logout">Logout</string>
    <string name="delete">delete</string>
    <string name="map_key1">AIzaSyAyh-uhJRTDe25nCJHWhLtwdnYrUZLjsZY</string>
    <string name="map_key">AIzaSyAj0dvvKydVkJtThEdZiIYCqZ1JGXmOLbU</string>
    <string name="menu_search">Search by name</string>
    <string name="cancel">Cancel</string>
    <string name="passwordvalidation">Password accept only alphanumeric and must contain at least 8 characters with 1 capital letters and 1 Special character.</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>


    <string name="checkout_ui_callback_scheme">checkoutui</string>
    <string name="payment_button_callback_scheme">paymentbutton</string>
    <string name="custom_ui_callback_scheme">customui</string>

    <string name="checkout_ui_title">Ready-to-Use UI</string>
    <string name="payment_button_title">Payment Button</string>
    <string name="custom_ui_title">SDK &amp; Your Own UI</string>
    <string name="checkout_immediately_with">Checkout immediately with</string>
    <string name="sdk_version_number">mobile sdk v%s</string>
    <string name="visa">VISA</string>
    <string name="checkout_layout_hint_card_number">Enter Card Number</string>

    <string name="card_holder_hint">Card Holder</string>
    <string name="card_number_hint">Card Number</string>
    <string name="card_expiry_month_hint">MM</string>
    <string name="card_expiry_year_hint">YY</string>
    <string name="card_cvv_hint">CVV</string>

    <string name="date_delimiter">/</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="button_pay_now">PAY NOW</string>

    <string name="message_successful_payment">The payment was successful</string>
    <string name="message_unsuccessful_payment">"The payment was unsuccessful"</string>
    <string name="message_payment_confirmation">Payment of %1$s %2$s will be executed</string>

    <string name="progress_message_please_wait">Please wait…</string>
    <string name="progress_message_checkout_id">Getting the checkout id…</string>
    <string name="progress_message_checkout_info">Getting the checkout info…</string>
    <string name="progress_message_payment_status">Getting the payment status…</string>
    <string name="progress_message_processing_payment">Processing payment…</string>

    <string name="error_message">An error occurred</string>
    <string name="error_empty_fields">The fields must not be empty</string>
    <string name="contact_details">Contact details</string>


</resources>
