<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu_appointment"
            android:icon="@drawable/iconstimetable"
            android:title="@string/menu_appointment" />
        <item
            android:id="@+id/nav_menu_address"
            android:icon="@drawable/address"
            android:title="@string/menu_address" />
        <item
            android:id="@+id/nav_menu_pet"
            android:icon="@drawable/pet_image"
            android:title="@string/menu_pet" />
        <item
            android:id="@+id/nav_menu_payment"
            android:icon="@drawable/payment"
            android:title="@string/menu_payment" />

        <item
            android:id="@+id/nav_menu_newoffer"
            android:icon="@drawable/offer"
            android:title="@string/menu_newoffer" />

        <item
            android:id="@+id/nav_menu_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>



</menu>
