<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pet.mypet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu_appointment"
        android:name="com.pet.mypet.appointment.GetAppointmentActivity"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_menu_address"
        android:name="com.pet.mypet.ui.address.AddressListActivity"
        android:label="@string/menu_address"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_menu_pet"
        android:name="com.pet.mypet.ui.pets.GetPetActivity"
        android:label="@string/menu_pet"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_menu_payment"
        android:name="com.pet.mypet.ui.payment.ShareFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_menu_newoffer"
        android:name="com.pet.mypet.ui.offer.OfferFragment"
        android:label="@string/menu_newoffer"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_menu_logout"
        android:name="com.pet.mypet.ui.send.SendFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>